<resources>
    <string name="app_name">乐议</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ceshi">ceshi</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="signUp">注册</string>
    <string name="welcome">Hello! 我的朋友\n欢迎回来</string>
    <string name="account">电话号码</string>
    <string name="password">密码</string>
    <string name="account_hint">请输入您的手机号码</string>
    <string name="password_hint">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="message_verification">短信验证登录</string>
    <string name="sign_up_one">注册1/3</string>
    <string name="sign_up_two">注册2/3</string>
    <string name="sign_up_three">注册3/3</string>
    <string name="set_pwd">请设置密码</string>
    <string name="set_pwd_hint">6-20位字母或数字</string>
    <string name="show_pwd">密码:</string>
    <string name="next_step">下一步</string>
    <string name="input_phonenum">请输入手机密码</string>
    <string name="set_head">点击设置头像</string>
    <string name="set_name_hint">请输入昵称</string>
    <string name="forget_pwd_one">找回密码1/2</string>
    <string name="forget_pwd_two">找回密码2/2</string>
    <string name="meeting">会议</string>
    <string name="contact_list">联系人列表</string>
    <string name="main_tab_session">会话</string>
    <string name="sesson_list">会话列表</string>
    <string name="search_hint">请输入要搜索的内容</string>
    <string name="schedule_hint">请输入日程内容</string>
    <string-array name="func_dialog_items">
        <item>Expand CalendarLayout</item>
        <item>Shrink CalendarLayout</item>
        <item>scrollToPre</item>
        <item>scrollToNext</item>
        <item>scrollToCurrent</item>
        <item>Limit calendar range</item>
        <item>Show range</item>
    </string-array>
    <!--云信-->
    <string name="verification">验证码</string>
    <string name="verification_hint">请输入验证码</string>
    <!-- 云信SDK所需文案 -->
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <!--云信-->
    <string name="team_apply_sending">发送中…</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="add_buddy">添加好友</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="search_advanced_team">搜索高级群</string>
    <string name="settings">设置</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="add_friend_self_tip">不能添加自己为好友</string>
    <string name="user_not_exsit">该用户不存在</string>
    <string name="user_tips">请检查你输入的帐号是否正确</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend">删除好友</string>
    <string name="add_friend">加为好友</string>
    <string name="user_profile">个人名片</string>
    <string name="birthday">生 日</string>
    <string name="phone">手 机</string>
    <string name="email">邮 箱</string>
    <string name="signature">签 名</string>
    <string name="alias">备注名</string>
    <string name="msg_notice">消息提醒</string>
    <string name="recent_sticky">消息置顶</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="black_list">黑名单</string>
    <string name="no_team">您还没有群</string>
    <string name="no_normal_team">您还没有讨论组</string>
    <string name="start_session_record">我发起了白板演示</string>
    <string name="session_end_record">白板演示已结束</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success">申请已发出</string>
    <string name="has_exist_in_team">已经在群里</string>
    <string name="team_num_limit">群数量已达上限</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="message_info">聊天信息</string>
    <!-- 阅后即焚 -->
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="snapchat_longclick_to_view">按住查看</string>
    <string name="other">其他</string>
    <string name="nickname">昵 称</string>
    <string name="phone_number">手机号码</string>
    <string name="gender">性 别</string>
    <string name="nickname_empty">昵称不能为空</string>
    <string name="user_info_update_failed">设置失败，请重试</string>
    <string name="user_info_update_success">设置成功</string>
    <string name="head">头 像</string>
    <string name="user_information">个人信息</string>
    <string name="user_info_update_cancel">取消更新</string>
    <string name="head_update_success">头像设置成功</string>
    <string name="head_update_failed">头像设置失败，请重试</string>
    <string name="male">男</string>
    <string name="shijiaduan">时间段选择</string>
    <string name="shike">时刻选择</string>
    <string name="shijian">时间</string>
    <string name="about_time">时间相关</string>
    <string name="shebeiname">设备相关</string>
    <string name="kaishishijian">开始时间</string>

    <string name="normalfile">常用文件</string>
    <string name="file_all">全部文件</string>
    <string name="empty_data">没有数据</string>
    <string name="not_available">sd卡不可用</string>
    <string name="already_select">已选择：%s</string>
    <string name="file_select_res">确定%s</string>
    <string name="file_select_max">最多选择%d个文件</string>
</resources>


