<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    >
    <!--用户相关提示-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:background="#00ffffff"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/act_login_iv"
                    android:background="@drawable/touxiang"/>
            <TextView
                android:text="注册"
                android:id="@+id/act_login_sign_up"
                android:textColor="#ffffffff"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/act_hint_title"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <!--输入框-->
    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">
      <TextView
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/account"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
         />
        <EditText
            android:id="@+id/login_s_userID_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:hint="@string/account_hint"
            android:inputType="text"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/login_s_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="5dp" />
    </LinearLayout>
<!--登录按钮-->
    <Button
        android:id="@+id/login_button"
        android:layout_below="@+id/login_ll"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="登陆"
        android:background="@drawable/login_btn"
        android:textColor="@android:color/white"
        />
    <!--短信验证和忘记密码-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/message_verification"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:id="@+id/act_message_verification"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:id="@+id/act_forget_password"
            />
    </RelativeLayout>
</LinearLayout>