<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#F0F0F0"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--自定义标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#00A7FF"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:id="@+id/act_sign_up_last_back_ll"
                android:background="@drawable/back"/>
        </LinearLayout>
        <TextView
            android:text="@string/sign_up_two"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#808080"
        >
        <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/act_sign_up_head"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="#ffffff"
        android:layout_centerInParent="true"
            app:riv_oval="true"
            />
     <TextView
         android:paddingTop="150dp"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#ffffff"
         android:text="@string/set_head"
         />
    </RelativeLayout>
    <EditText
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:id="@+id/act_sign_up_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_et_bg"
        android:hint="@string/set_name_hint"

        />
    <Button
        android:id="@+id/act_sign_up_last_bt"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:background="#00A7FF"
        android:layout_marginRight="10dp"
        android:text="完成"
        android:textColor="@android:color/white"
        />

</LinearLayout>